tests/negative/neg_case_multi_choice.safe
-- Test: neg_case_multi_choice
-- Description: Multi-choice case arms are outside the PR11.2 case subset.
-- Expected: REJECT unsupported_source_construct

package neg_case_multi_choice

   function classify (value : in integer) returns integer

      case value
         when 1, 2
            return 1;

         when others
            return 0;





